fix some alignment issues

--- a/public/css/portfolio.css
+++ b/public/css/portfolio.css
@@ -8,6 +8,8 @@
 #codychurch,
 #depoppler,
 #wickid-sense {
+    margin: auto;
+    max-width: 1100px;
     padding: 4rem 2.5rem;
 }
 
@@ -17,15 +19,15 @@
 
 .portfolio-intro {
     color: #ccc;
-    padding: 7rem 5rem 2rem;
+    padding: 7rem 2.5rem 2rem;
     position: relative;
+    margin: auto;
+    max-width: 1100px;
 }
 
 .portfolio-intro__header {
     display: flex;
     flex-direction: column;
-    margin: auto;
-    max-width: 1100px;
 }
 
 .portfolio-intro__header img{
@@ -40,11 +42,12 @@
 
 .portfolio-intro__toolbar {
     display: flex;
-    justify-content: space-around;
+    flex-wrap: wrap;
+    justify-content: center;
     margin-top: 5rem;
 }
 
-.portfolio-intro a {
+.portfolio-intro__toolbar a {
     margin-top: 2rem;
 }
 
@@ -130,6 +133,17 @@
         width: 60%;
     }
     
+    .portfolio-intro__toolbar {
+        justify-content: space-between;
+    }
+
+    .portfolio-intro__toolbar a:first-child {
+        margin-left: 0;
+    }
+
+    .portfolio-intro__toolbar a:last-child {
+        margin-right: 0;
+    }
     
     .work-row {
         display: flex;
